# EUI-NEO

./: .gitignore  CMakeLists.txt  README.md  README.zh-CN.md
.github/workflows/: pages.yml
3rd/: dependencies.cmake
apps/sidebar_starter/: app.cpp
components/: checkbox.h  components.h  input.h  radio.h  switch.h
components/workshop/: SKILL.md  heart_switch.h  tilt_card.h
core/: animation.h  dsl.h  dsl_runtime.h  layout.h  platform.cpp  platform.h  tray_bridge.c
core/app/: app_runner.h  dsl_window_runtime.h  frame_pacing.h  glfw_app_main.cpp  main_window_runtime.h  sdl2_app_main.cpp  sdl3_app_main.cpp
core/input/: input_state.h
core/platform/: ime_bridge.c  ime_bridge.h  network.cpp  network.h  platform.cpp  platform.h  resource_io.cpp  resource_io.h
core/render/: image.cpp  image.h  image_source.cpp  image_source.h  primitive.cpp  primitive_geometry.h  render_backend.h  text.cpp  text.h  text_types.h
core/render/opengl/: opengl_backend.cpp  opengl_backend.h  opengl_image.cpp  opengl_primitives.cpp  opengl_shader_preamble.h  opengl_text.cpp
core/render/vulkan/: vulkan_backend.cpp  vulkan_backend.h  vulkan_cache.cpp  vulkan_image.cpp  vulkan_polygon.cpp  vulkan_polygon_shaders.h  vulkan_primitives.cpp  vulkan_rounded_rect_shaders.h
core/render/vulkan/shaders/: polygon.frag  polygon.vert  rounded_rect.frag
core/runtime/: runtime_input.h  runtime_instances.h  runtime_lifecycle.h  runtime_render.h  runtime_state_bindings.h  runtime_tree.h  runtime_update.h
core/window/: window_backend.cpp
docs/: DSL.md  SKILL.md  Slint渲染与优化对比.md  retained_layer_cache.md  动画.md  图片.md  布局.md  平台能力.md  开发与发布.md  异步.md  渲染后端架构.md  稳定版路线图.md  组件.md  网络.md
docs/skills/eui-neo-ui-replicator/: SKILL.md
docs/skills/eui-neo-ui-replicator/agents/: openai.yaml
examples/: card_slider.cpp  chat.cpp  gallery.cpp  serial_tool.cpp  vulkan_lifecycle.cpp
examples/pages/: gallery_controls.h  gallery_layout.h  gallery_settings.h
include/eui/: app.h  network.h  types.h
include/eui/detail/: dsl_app_impl.h
ohos/: .gitignore  README.md  build-profile.json5  oh-package.json5
ohos/AppScope/: app.json5
ohos/AppScope/resources/base/element/: string.json
ohos/entry/: build-profile.json5  oh-package.json5
ohos/entry/src/main/: module.json5
ohos/entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp
ohos/entry/src/main/cpp/types/libentry/: Index.d.ts  oh-package.json5
ohos/entry/src/main/ets/entryability/: EntryAbility.ets
ohos/entry/src/main/ets/pages/: Index.ets
ohos/entry/src/main/resources/base/element/: color.json  string.json
ohos/hvigor/: hvigor-config.json5
scripts/: generate_vulkan_shaders.py
site/: app.js  styles.css
tests/: 25f05d4_内存占用.md
tests/fixtures/: complex_scroll_stress_viewer.cpp  empty_window.cpp  hover_scroll_repro_viewer.cpp  layout_regression_viewer.cpp
tests/probes/: render_clear_probe.cpp  window_only_probe.cpp
tests/unit/: input_model.cpp
